--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <div class="emoji">🦖</div>
                 <h3>динозавр</h3>
                 <p>500 рублев</p>
-                <button onclick="addToCart('Шар Единорог', 500)">Добавить</button>
+                <button onclick="addToCart('Шар динозаур', 500)">Добавить</button>
             </div>
              <div class="product-card">
                 <div class="emoji">🌟</div>
@@ -65,4 +65,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
