--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 
     <div id="shop-screen">
         <header>
-            <h1>Магазин шаров 🎈</h1>
+            <h1>За шариком!🎈</h1>
         </header>
 
         <div class="products-grid">
             <div class="product-card">
                 <div class="emoji">🔴</div>
-                <h3>Красный шар</h3>
-                <p>100 руб.</p>
+                <h3>красный шар</h3>
+                <p>100 рублев</p>
                 <div class="quantity-controls">
                     <button onclick="changeQty(-1, 'Красный шар', 100)">-</button>
                     <span class="quantity" id="qty-Красный шар">0</span>
@@ -28,8 +28,8 @@
 
             <div class="product-card">
                 <div class="emoji">🔵</div>
-                <h3>Синий шар</h3>
-                <p>100 руб.</p>
+                <h3>синий шар</h3>
+                <p>100 рублев</p>
                 <div class="quantity-controls">
                     <button onclick="changeQty(-1, 'Синий шар', 100)">-</button>
                     <span class="quantity" id="qty-Синий шар">0</span>
@@ -38,20 +38,20 @@
             </div>
 
             <div class="product-card">
-                <div class="emoji">🦄</div>
-                <h3>Единорог</h3>
-                <p>500 руб.</p>
+                <div class="emoji">🦖</div>
+                <h3>динозаур</h3>
+                <p>500 рублев</p>
                 <div class="quantity-controls">
-                    <button onclick="changeQty(-1, 'Единорог', 500)">-</button>
-                    <span class="quantity" id="qty-Единорог">0</span>
-                    <button onclick="changeQty(1, 'Единорог', 500)">+</button>
+                    <button onclick="changeQty(-1, 'динозаур', 500)">-</button>
+                    <span class="quantity" id="qty-динозаур">0</span>
+                    <button onclick="changeQty(1, 'динозаур', 500)">+</button>
                 </div>
             </div>
 
             <div class="product-card">
                 <div class="emoji">🌟</div>
-                <h3>Звезда</h3>
-                <p>300 руб.</p>
+                <h3>звезда</h3>
+                <p>300 рублев</p>
                 <div class="quantity-controls">
                     <button onclick="changeQty(-1, 'Звезда', 300)">-</button>
                     <span class="quantity" id="qty-Звезда">0</span>
