--- a/admin.html
+++ b/admin.html
@@ -88,7 +88,8 @@
 
             const res = await fetch('/api/admin/add_product', {
                 method: 'POST',
-                headers: {'Content-Type': 'application/json'},
+                headers: {'Content-Type': 'application/json',
+                'ngrok-skip-browser-warning': 'true'},
                 body: JSON.stringify(product)
             });
 
